# text2doc

./: .gitignore  README.md  amvera.yml  bot.py  pyproject.toml  requirements.txt
.github/workflows/: auto-commit.yml
