[project]
name = "text2doc"
version = "0.1.0"
description = ""
authors = [
    {name = "Vsevolod",email = "vsevolodtroy@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
streamlit = "^1.45.1"
telebot = "^0.0.5"
python-docx = "^1.1.2"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
